# AdventOfCode2020

./: .gitignore  CMakeLists.txt  README.md
Common/: CMakeLists.txt
Common/include/: FileReader.hpp
Common/src/: FileReader.cpp
Day01/: CMakeLists.txt
Day01/src/: main.cpp
Day02/: CMakeLists.txt
Day02/include/: PasswordValidator.hpp
Day02/src/: main.cpp  test.cpp
Day03/: CMakeLists.txt
Day03/include/: TobogganRide.hpp
Day03/src/: main.cpp
Day04/: CMakeLists.txt
Day04/src/: main.cpp  test.cpp
Day05/: CMakeLists.txt
Day05/src/: main.cpp  test.cpp
Day06/: CMakeLists.txt
Day06/src/: main.cpp  test.cpp
Day07/: CMakeLists.txt
Day07/src/: LuggageProcessor.cpp  main.cpp  test.cpp
Day08/: CMakeLists.txt
Day08/src/: main.cpp
Day09/: CMakeLists.txt
Day09/src/: main.cpp
Day10/: CMakeLists.txt
Day10/src/: main.cpp  test.cpp
Day11/: CMakeLists.txt
Day11/src/: main.cpp  test.cpp
Day12/: CMakeLists.txt
Day12/src/: main.cpp  test.cpp
Day13/: CMakeLists.txt
Day13/include/: BusPlanner.hpp
Day13/src/: BusPlanner.cpp  main.cpp
Day14/: CMakeLists.txt
Day14/src/: main.cpp
Day15/: CMakeLists.txt
Day16/: CMakeLists.txt
Day16/src/: main.cpp
Day17/: CMakeLists.txt
Day17/src/: main.cpp  test.cpp
Day18/: CMakeLists.txt
Day18/src/: main.cpp
Day19/: CMakeLists.txt
Day19/src/: main.cpp
Day20/: CMakeLists.txt
Day20/src/: main.cpp
Day21/: CMakeLists.txt
Day21/src/: main.cpp
Day22/: CMakeLists.txt
Day22/src/: main.cpp
Day23/: CMakeLists.txt
Day23/src/: main.cpp
Day24/: CMakeLists.txt
Day25/: CMakeLists.txt
(+3 files in other folders)
